# test-qml

./: CMakeLists.txt  README.md  test.qml
qml/: CMakeLists.txt  moc_small_object.cxx  plugin.cpp  plugin.h  qmldir  small_object.cpp  small_object.h
